[package]
edition      = "2024"
name         = "vl6180x_example"
authors      = ["Fabian Tietz <fabi.303.ft@gmail.com"]
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "vl6180x_example"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32c3"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }
esp-println = { version = "0.16.1", features = ["esp32c3"] }
critical-section = "1.2.0"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2.0"
embedded-graphics = "0.8.1"
ssd1306 = { version = "0.10.0", features = ["async"] }

vl6180x = { path = "src/lib/vl6180x" }
tiny_oled = { path = "src/lib/oled" }
heapless = "0.9.2"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
