[package]
edition      = "2024"
name         = "vl6180x_example"
authors      = ["Fabian Tietz <fabi.303.ft@gmail.com"]
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "vl6180x_example"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32c3"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }
esp-println = { version = "0.16.1", features = ["esp32c3"] }
critical-section = "1.2.0"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2.0"
embedded-graphics = "0.8.1"
ssd1306 = { version = "0.10.0", features = ["async"] }

vl6180x = { path = "src/lib/vl6180x" }
tiny_oled = { path = "src/lib/oled" }
heapless = "0.9.2"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
# This is your main development profile.

# 1. Set Debugging Information Level
# The standard default is usually 1, but setting it to 2 or higher
# ensures the DWARF debug information is fully emitted, including
# information needed for stack unwinding.
debug = 2

# 2. Disable Link Time Optimization (LTO)
# LTO can aggressively optimize code across modules, often eliminating
# or moving stack frame pointers, confusing the debugger.
lto = "off"

# 3. Restrict Code Generation Units
# By default, Cargo compiles code in parallel units. Setting this to 1 
# forces the compiler to use a single compilation unit, which results in 
# more reliable (though slower) debug information for the debugger.
codegen-units = 1

# If you have a separate test or bench profile, ensure they also have
# the correct debug settings if you plan to debug them.
# [profile.test]
# debug = 2

# [profile.bench]
# debug = 2

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
