[package]
edition      = "2024"
name         = "tiny_oled"
authors      = ["Fabian Tietz <fabi.303.ft@gmail.com"]
rust-version = "1.88"
version      = "0.1.0"
description  = "A simple Oled driver, capable of outputting text on mini 0,42 display"
license      = "MIT"

[lib]
name = "tiny_oled"
path = "./lib.rs"

[dependencies]
embedded-hal = "1.0.0"
embedded-graphics = "0.8.0"
esp-println = { version = "0.16.1", features = ["esp32c3"] }
ssd1306 = { version = "0.10.0"}